Fixed: Area below tab bar overlaps with scrolling content

--- a/features/polyExplorer/src/components/featuredCompany/featuredCompany.css
+++ b/features/polyExplorer/src/components/featuredCompany/featuredCompany.css
@@ -3,7 +3,8 @@
     align-items: center;
     box-sizing: border-box;
     width: 100%;
-    margin: 24px auto 0px auto;
+    margin: 0 auto;
+    padding-top: 24px;
     border-radius: 24px;
 }
 
